fix: resizebar not working after setting manual row change button z-index to 2 ( resizebar is now also set to 2)

--- a/src/renderer/src/comps/Table/Table.css
+++ b/src/renderer/src/comps/Table/Table.css
@@ -201,6 +201,7 @@
  	right: -2.5px;
  	position: absolute;
  	width: 5px;
+	z-index: 2;
  }
 
 
